<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/login_margins">

        <EditText
            android:id="@+id/email_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/email_input_edit_text"
            style="@style/BoxEditText"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/bottom_margins"/>

        <EditText
            android:id="@+id/password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:hint="@string/password_input_edit_text"
            style="@style/BoxEditText"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/bottom_margins"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BoxButton"
            android:text="@string/login_button"
            android:layout_marginBottom="@dimen/bottom_margins"/>

    </LinearLayout>

    <TextView
        android:id="@+id/register_button_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Registration_Button_Text_View"
        android:text="@string/registration_button_text_view"
        android:gravity="center"/>

</LinearLayout>