<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_button"
            style="@style/BoxButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_btn"
            android:textStyle="bold"
            android:textColor="@color/text_title"
            android:onClick="clickOfButton"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/delete_button"
            style="@style/BoxButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_btn"
            android:textStyle="bold"
            android:textColor="@color/text_title"
            android:onClick="clickOfButton"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        style="@style/BoxButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/logout_btn"
        android:textColor="@color/text_title"
        android:onClick="clickOfButton"
        android:textStyle="bold" />

</LinearLayout>